.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
16:39:45 **** Incremental Build of configuration Debug for project stm32f411_boot ****
make -j16 all 
arm-none-eabi-gcc "../src/ap/ap.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32F411xE -c -I"C:/project/study/stm32f411_boot/src" -I"C:/project/study/stm32f411_boot/src/ap" -I"C:/project/study/stm32f411_boot/src/bsp" -I"C:/project/study/stm32f411_boot/src/common" -I"C:/project/study/stm32f411_boot/src/common/core" -I"C:/project/study/stm32f411_boot/src/common/hw/include" -I"C:/project/study/stm32f411_boot/src/hw" -I"C:/project/study/stm32f411_boot/src/lib/cube_f411/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"C:/project/study/stm32f411_boot/src/lib/cube_f411/Drivers/CMSIS/Include" -I"C:/project/study/stm32f411_boot/src/lib/cube_f411/Drivers/STM32F4xx_HAL_Driver/Inc" -I"C:/project/study/stm32f411_boot/src/hw/driver/usb" -I"C:/project/study/stm32f411_boot/src/hw/driver/usb/core" -I"C:/project/study/stm32f411_boot/src/hw/driver/usb/usb_cdc" -Os -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"src/ap/ap.d" -MT"src/ap/ap.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "src/ap/ap.o"
arm-none-eabi-gcc -o "stm32f411_boot.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\project\study\stm32f411_boot\src\bsp\ldscript\STM32F411CEUX_FLASH.ld" --specs=nosys.specs -Wl,-Map="stm32f411_boot.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
C:/ST/STM32CubeIDE_1.19.0/STM32CubeIDE/plugins/com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.13.3.rel1.win32_1.0.0.202411081344/tools/bin/../lib/gcc/arm-none-eabi/13.3.1/../../../../arm-none-eabi/bin/ld.exe: warning: stm32f411_boot.elf has a LOAD segment with RWX permissions
Finished building target: stm32f411_boot.elf
 
arm-none-eabi-size  stm32f411_boot.elf 
arm-none-eabi-objdump -h -S stm32f411_boot.elf  > "stm32f411_boot.list"
   text	   data	    bss	    dec	    hex	filename
  36428	    744	   9160	  46332	   b4fc	stm32f411_boot.elf
Finished building: default.size.stdout
 
Finished building: stm32f411_boot.list
 
16:39:48 **** Incremental Build of configuration Debug for project stm32f411_boot ****
make -j16 all 
arm-none-eabi-size  stm32f411_boot.elf 
   text	   data	    bss	    dec	    hex	filename
  36428	    744	   9160	  46332	   b4fc	stm32f411_boot.elf
Finished building: default.size.stdout
 
16:47:11 **** Incremental Build of configuration Debug for project stm32f411_boot ****
make -j16 all 
arm-none-eabi-gcc "../src/ap/ap.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32F411xE -c -I"C:/project/study/stm32f411_boot/src" -I"C:/project/study/stm32f411_boot/src/ap" -I"C:/project/study/stm32f411_boot/src/bsp" -I"C:/project/study/stm32f411_boot/src/common" -I"C:/project/study/stm32f411_boot/src/common/core" -I"C:/project/study/stm32f411_boot/src/common/hw/include" -I"C:/project/study/stm32f411_boot/src/hw" -I"C:/project/study/stm32f411_boot/src/lib/cube_f411/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"C:/project/study/stm32f411_boot/src/lib/cube_f411/Drivers/CMSIS/Include" -I"C:/project/study/stm32f411_boot/src/lib/cube_f411/Drivers/STM32F4xx_HAL_Driver/Inc" -I"C:/project/study/stm32f411_boot/src/hw/driver/usb" -I"C:/project/study/stm32f411_boot/src/hw/driver/usb/core" -I"C:/project/study/stm32f411_boot/src/hw/driver/usb/usb_cdc" -Os -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"src/ap/ap.d" -MT"src/ap/ap.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "src/ap/ap.o"
../src/ap/ap.c: In function 'apInit':
../src/ap/ap.c:19:16: error: request for member 'cliBoot' in something not a structure or union
   19 |   cliAdd("boot".cliBoot);
      |                ^
../src/ap/ap.c:19:3: error: too few arguments to function 'cliAdd'
   19 |   cliAdd("boot".cliBoot);
      |   ^~~~~~
In file included from C:/project/study/stm32f411_boot/src/hw/hw.h:21,
                 from ../src/ap/ap.h:11,
                 from ../src/ap/ap.c:9:
C:/project/study/stm32f411_boot/src/common/hw/include/cli.h:42:6: note: declared here
   42 | bool cliAdd(const char *cmd_str, void (*p_func)(cli_args_t *));
      |      ^~~~~~
make: *** [src/ap/subdir.mk:19: src/ap/ap.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.
16:47:42 **** Incremental Build of configuration Debug for project stm32f411_boot ****
make -j16 all 
arm-none-eabi-gcc "../src/ap/ap.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32F411xE -c -I"C:/project/study/stm32f411_boot/src" -I"C:/project/study/stm32f411_boot/src/ap" -I"C:/project/study/stm32f411_boot/src/bsp" -I"C:/project/study/stm32f411_boot/src/common" -I"C:/project/study/stm32f411_boot/src/common/core" -I"C:/project/study/stm32f411_boot/src/common/hw/include" -I"C:/project/study/stm32f411_boot/src/hw" -I"C:/project/study/stm32f411_boot/src/lib/cube_f411/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"C:/project/study/stm32f411_boot/src/lib/cube_f411/Drivers/CMSIS/Include" -I"C:/project/study/stm32f411_boot/src/lib/cube_f411/Drivers/STM32F4xx_HAL_Driver/Inc" -I"C:/project/study/stm32f411_boot/src/hw/driver/usb" -I"C:/project/study/stm32f411_boot/src/hw/driver/usb/core" -I"C:/project/study/stm32f411_boot/src/hw/driver/usb/usb_cdc" -Os -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"src/ap/ap.d" -MT"src/ap/ap.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "src/ap/ap.o"
arm-none-eabi-gcc -o "stm32f411_boot.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\project\study\stm32f411_boot\src\bsp\ldscript\STM32F411CEUX_FLASH.ld" --specs=nosys.specs -Wl,-Map="stm32f411_boot.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
C:/ST/STM32CubeIDE_1.19.0/STM32CubeIDE/plugins/com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.13.3.rel1.win32_1.0.0.202411081344/tools/bin/../lib/gcc/arm-none-eabi/13.3.1/../../../../arm-none-eabi/bin/ld.exe: warning: stm32f411_boot.elf has a LOAD segment with RWX permissions
Finished building target: stm32f411_boot.elf
 
arm-none-eabi-size  stm32f411_boot.elf 
arm-none-eabi-objdump -h -S stm32f411_boot.elf  > "stm32f411_boot.list"
   text	   data	    bss	    dec	    hex	filename
  36460	    744	   9160	  46364	   b51c	stm32f411_boot.elf
Finished building: default.size.stdout
 
Finished building: stm32f411_boot.list
 
17:07:59 **** Incremental Build of configuration Debug for project stm32f411_boot ****
make -j16 all 
arm-none-eabi-gcc "../src/ap/ap.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32F411xE -c -I"C:/project/study/stm32f411_boot/src" -I"C:/project/study/stm32f411_boot/src/ap" -I"C:/project/study/stm32f411_boot/src/bsp" -I"C:/project/study/stm32f411_boot/src/common" -I"C:/project/study/stm32f411_boot/src/common/core" -I"C:/project/study/stm32f411_boot/src/common/hw/include" -I"C:/project/study/stm32f411_boot/src/hw" -I"C:/project/study/stm32f411_boot/src/lib/cube_f411/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"C:/project/study/stm32f411_boot/src/lib/cube_f411/Drivers/CMSIS/Include" -I"C:/project/study/stm32f411_boot/src/lib/cube_f411/Drivers/STM32F4xx_HAL_Driver/Inc" -I"C:/project/study/stm32f411_boot/src/hw/driver/usb" -I"C:/project/study/stm32f411_boot/src/hw/driver/usb/core" -I"C:/project/study/stm32f411_boot/src/hw/driver/usb/usb_cdc" -Os -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"src/ap/ap.d" -MT"src/ap/ap.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "src/ap/ap.o"
arm-none-eabi-gcc -o "stm32f411_boot.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\project\study\stm32f411_boot\src\bsp\ldscript\STM32F411CEUX_FLASH.ld" --specs=nosys.specs -Wl,-Map="stm32f411_boot.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
C:/ST/STM32CubeIDE_1.19.0/STM32CubeIDE/plugins/com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.13.3.rel1.win32_1.0.0.202411081344/tools/bin/../lib/gcc/arm-none-eabi/13.3.1/../../../../arm-none-eabi/bin/ld.exe: warning: stm32f411_boot.elf has a LOAD segment with RWX permissions
Finished building target: stm32f411_boot.elf
 
arm-none-eabi-size  stm32f411_boot.elf 
arm-none-eabi-objdump -h -S stm32f411_boot.elf  > "stm32f411_boot.list"
   text	   data	    bss	    dec	    hex	filename
  36932	    744	   9160	  46836	   b6f4	stm32f411_boot.elf
Finished building: default.size.stdout
 
Finished building: stm32f411_boot.list
 
